opam-version: "2.0"
maintainer: "zoggy@bat8.org"
authors: ["Maxence Guesdon"]
homepage: "https://zoggy.github.io/odiff-gtk"
license: "LGPL-3.0-only"
doc: ["https://zoggy.github.io/odiff-gtk/index.html"]
tags: [
  "diff"
  "gtk"
  "merge"
]
build: [make "all"]
remove: [["ocamlfind" "remove" "diff-gtk"]]
depends: [
  "ocaml" {< "4.06.0"}
  "ocamlfind"
  "lablgtk"
  "ocamldiff" {>= "1.1"}
]
install: [make "install"]
synopsis: "OCaml library to display and merge diffs using Lablgtk."
description:
  "Odiff-gtk was previously part of OCamldiff but is now developped separately."
dev-repo: "git+https://github.com/zoggy/odiff-gtk.git"
flags: light-uninstall
